syntax="proto3";

package user_service;
option go_package="genproto/user_service";


message User{
    string id  =1;
    string first_name = 2;
    string last_name = 3;
    string phone_number =4;
}

message CreateUserRequest{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number =4;
}

message Pkey{
    string id=1;
}

message UpdateUserRequest{
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone_number =4;
}

message GetAllUsersRequest{
    string search=1;
    int64 page=2;
    int32 limit=3;
}

message GetAllUsersResponse{
    repeated User users= 1;
    int64 count =2;
}